gateway/via.yaml
# Here we replace the egress route. Instead of 2 routes to configure this, we use "via"
# Setup egress
apiVersion: networking.x-k8s.io/v1alpha1
kind: Gateway
metadata:
  name: egress-gw
  namespace: istio-system
spec:
  gatewayClassName: egress
  listeners:
  - hostname: "secure.example.com"
    port: 80
    protocol: HTTP
    routes:
      kind: HTTPRoute
      namespaces:
        from: All
      selector:
        matchLabels:
          gateway: "egress"
---
# No longer needed: egress-to-example
apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  name: mesh-to-egress
  namespace: external
spec:
  gateways:
    # NEW: FromClass
    allow: FromClass
    gatewayClass: mesh
  hostnames:
  - secure.example.com
  rules:
  - forwardTo:
    - backendRef:
        kind: hostname # NEW: forward to hostname
        group: istio.io
        name: secure.example.com
      port: 80
      via: egress-gw # NEW: via
---
